src/main/java/com/ljl/antlr/GCCParser.java
// Generated from D:/CompilerPrincipleProjects/Graph-Config-Compiler-Project/Graph-Config-Compiler/src/main/java/com/ljl/antlr/GCCParser.g4 by ANTLR 4.13.1
package com.ljl.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GCCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, CONFIG_START=3, CONFIG_END=4, BG_START=5, BG_END=6, COL_START=7, 
		COL_END=8, X_RANGE_START=9, X_RANGE_END=10, Y_RANGE_START=11, Y_RANGE_END=12, 
		SHAPE_START=13, SHAPE_END=14, POINTS_START=15, POINTS_END=16, LINE_START=17, 
		LINE_END=18, LINES_START=19, LINES_END=20, CURVE_START=21, CURVE_END=22, 
		SCALE_START=23, SCALE_END=24, PAD_START=25, PAD_END=26, CENTER_START=27, 
		CENTER_END=28, WID_START=29, WID_END=30, WIDTH_START=31, WIDTH_END=32, 
		HEIGHT_START=33, HEIGHT_END=34, LIST_START=35, LIST_END=36, POINT_START=37, 
		POINT_END=38, SLOPE_START=39, SLOPE_END=40, RADIUS_START=41, RADIUS_END=42, 
		RANGE_START=43, RANGE_END=44, AMOUNT_START=45, AMOUNT_END=46, FUNCTION_START=47, 
		FUNCTION_END=48, DIRECTION_START=49, DIRECTION_END=50, POS_START=51, POS_END=52, 
		FROM_START=53, FROM_END=54, STEP_START=55, STEP_END=56, PRECISION_START=57, 
		PRECISION_END=58, TYPE_START=59, TYPE_END=60, BOOLEAN=61, INF=62, COMMENT_START=63, 
		COMMENT_END=64, NUMBER=65, COMMA=66, SEMICOLON=67, DIRECTION_TYPE=68, 
		COLOR_TYPE=69, SHAPE_TYPE=70, FUNCTION_EXPR=71;
	public static final int
		RULE_config = 0, RULE_element = 1, RULE_bg = 2, RULE_shape = 3, RULE_points = 4, 
		RULE_line = 5, RULE_lines = 6, RULE_curve = 7, RULE_scale = 8, RULE_col = 9, 
		RULE_x_range = 10, RULE_y_range = 11, RULE_wid = 12, RULE_width = 13, 
		RULE_height = 14, RULE_pad = 15, RULE_radius = 16, RULE_list = 17, RULE_point = 18, 
		RULE_slope = 19, RULE_range = 20, RULE_amount = 21, RULE_direction = 22, 
		RULE_pos = 23, RULE_from = 24, RULE_step = 25, RULE_precision = 26, RULE_type = 27, 
		RULE_center = 28, RULE_function = 29, RULE_number_pair = 30, RULE_number_pair_list = 31, 
		RULE_number_triplet = 32, RULE_color_val = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"config", "element", "bg", "shape", "points", "line", "lines", "curve", 
			"scale", "col", "x_range", "y_range", "wid", "width", "height", "pad", 
			"radius", "list", "point", "slope", "range", "amount", "direction", "pos", 
			"from", "step", "precision", "type", "center", "function", "number_pair", 
			"number_pair_list", "number_triplet", "color_val"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'<config>'", "'</config>'", "'<bg>'", "'</bg>'", "'<col>'", 
			"'</col>'", "'<xRange>'", "'</xRange>'", "'<yRange>'", "'</yRange>'", 
			"'<shape>'", "'</shape>'", "'<points>'", "'</points>'", "'<line>'", "'</line>'", 
			"'<lines>'", "'</lines>'", "'<curve>'", "'</curve>'", "'<scale>'", "'</scale>'", 
			"'<pad>'", "'</pad>'", "'<center>'", "'</center>'", "'<wid>'", "'</wid>'", 
			"'<width>'", "'</width>'", "'<height>'", "'</height>'", "'<list>'", "'</list>'", 
			"'<point>'", "'</point>'", "'<slope>'", "'</slope>'", "'<radius>'", "'</radius>'", 
			"'<range>'", "'</range>'", "'<amount>'", "'</amount>'", "'<function>'", 
			"'</function>'", "'<direction>'", "'</direction>'", "'<pos>'", "'</pos>'", 
			"'<from>'", "'</from>'", "'<step>'", "'</step>'", "'<precision>'", "'</precision>'", 
			"'<type>'", "'</type>'", null, "'inf'", "'<!--'", "'-->'", null, "','", 
			"';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMMENT", "CONFIG_START", "CONFIG_END", "BG_START", "BG_END", 
			"COL_START", "COL_END", "X_RANGE_START", "X_RANGE_END", "Y_RANGE_START", 
			"Y_RANGE_END", "SHAPE_START", "SHAPE_END", "POINTS_START", "POINTS_END", 
			"LINE_START", "LINE_END", "LINES_START", "LINES_END", "CURVE_START", 
			"CURVE_END", "SCALE_START", "SCALE_END", "PAD_START", "PAD_END", "CENTER_START", 
			"CENTER_END", "WID_START", "WID_END", "WIDTH_START", "WIDTH_END", "HEIGHT_START", 
			"HEIGHT_END", "LIST_START", "LIST_END", "POINT_START", "POINT_END", "SLOPE_START", 
			"SLOPE_END", "RADIUS_START", "RADIUS_END", "RANGE_START", "RANGE_END", 
			"AMOUNT_START", "AMOUNT_END", "FUNCTION_START", "FUNCTION_END", "DIRECTION_START", 
			"DIRECTION_END", "POS_START", "POS_END", "FROM_START", "FROM_END", "STEP_START", 
			"STEP_END", "PRECISION_START", "PRECISION_END", "TYPE_START", "TYPE_END", 
			"BOOLEAN", "INF", "COMMENT_START", "COMMENT_END", "NUMBER", "COMMA", 
			"SEMICOLON", "DIRECTION_TYPE", "COLOR_TYPE", "SHAPE_TYPE", "FUNCTION_EXPR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GCCParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GCCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConfigContext extends ParserRuleContext {
		public TerminalNode CONFIG_START() { return getToken(GCCParser.CONFIG_START, 0); }
		public TerminalNode CONFIG_END() { return getToken(GCCParser.CONFIG_END, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterConfig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitConfig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitConfig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConfigContext config() throws RecognitionException {
		ConfigContext _localctx = new ConfigContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_config);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(CONFIG_START);
			{
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 11182112L) != 0)) {
				{
				{
				setState(69);
				element();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(75);
			match(CONFIG_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public BgContext bg() {
			return getRuleContext(BgContext.class,0);
		}
		public ShapeContext shape() {
			return getRuleContext(ShapeContext.class,0);
		}
		public PointsContext points() {
			return getRuleContext(PointsContext.class,0);
		}
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public CurveContext curve() {
			return getRuleContext(CurveContext.class,0);
		}
		public ScaleContext scale() {
			return getRuleContext(ScaleContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BG_START:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				bg();
				}
				break;
			case SHAPE_START:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				shape();
				}
				break;
			case POINTS_START:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				points();
				}
				break;
			case LINE_START:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				line();
				}
				break;
			case LINES_START:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				lines();
				}
				break;
			case CURVE_START:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				curve();
				}
				break;
			case SCALE_START:
				enterOuterAlt(_localctx, 7);
				{
				setState(83);
				scale();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BgContext extends ParserRuleContext {
		public TerminalNode BG_START() { return getToken(GCCParser.BG_START, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public X_rangeContext x_range() {
			return getRuleContext(X_rangeContext.class,0);
		}
		public Y_rangeContext y_range() {
			return getRuleContext(Y_rangeContext.class,0);
		}
		public TerminalNode BG_END() { return getToken(GCCParser.BG_END, 0); }
		public BgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterBg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitBg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitBg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BgContext bg() throws RecognitionException {
		BgContext _localctx = new BgContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(BG_START);
			setState(87);
			col();
			setState(88);
			x_range();
			setState(89);
			y_range();
			setState(90);
			match(BG_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShapeContext extends ParserRuleContext {
		public TerminalNode SHAPE_START() { return getToken(GCCParser.SHAPE_START, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public WidContext wid() {
			return getRuleContext(WidContext.class,0);
		}
		public PadContext pad() {
			return getRuleContext(PadContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public CenterContext center() {
			return getRuleContext(CenterContext.class,0);
		}
		public WidthContext width() {
			return getRuleContext(WidthContext.class,0);
		}
		public HeightContext height() {
			return getRuleContext(HeightContext.class,0);
		}
		public TerminalNode SHAPE_END() { return getToken(GCCParser.SHAPE_END, 0); }
		public ShapeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterShape(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitShape(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitShape(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShapeContext shape() throws RecognitionException {
		ShapeContext _localctx = new ShapeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_shape);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(SHAPE_START);
			setState(93);
			col();
			setState(94);
			wid();
			setState(95);
			pad();
			setState(96);
			type();
			setState(97);
			center();
			setState(98);
			width();
			setState(99);
			height();
			setState(100);
			match(SHAPE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PointsContext extends ParserRuleContext {
		public TerminalNode POINTS_START() { return getToken(GCCParser.POINTS_START, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public WidContext wid() {
			return getRuleContext(WidContext.class,0);
		}
		public PadContext pad() {
			return getRuleContext(PadContext.class,0);
		}
		public RadiusContext radius() {
			return getRuleContext(RadiusContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public TerminalNode POINTS_END() { return getToken(GCCParser.POINTS_END, 0); }
		public PointsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_points; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterPoints(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitPoints(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitPoints(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PointsContext points() throws RecognitionException {
		PointsContext _localctx = new PointsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_points);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(POINTS_START);
			setState(103);
			col();
			setState(104);
			wid();
			setState(105);
			pad();
			setState(106);
			radius();
			setState(107);
			list();
			setState(108);
			match(POINTS_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public TerminalNode LINE_START() { return getToken(GCCParser.LINE_START, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public WidContext wid() {
			return getRuleContext(WidContext.class,0);
		}
		public PointContext point() {
			return getRuleContext(PointContext.class,0);
		}
		public SlopeContext slope() {
			return getRuleContext(SlopeContext.class,0);
		}
		public TerminalNode LINE_END() { return getToken(GCCParser.LINE_END, 0); }
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(LINE_START);
			setState(111);
			col();
			setState(112);
			wid();
			setState(113);
			point();
			setState(114);
			slope();
			setState(115);
			match(LINE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LinesContext extends ParserRuleContext {
		public TerminalNode LINES_START() { return getToken(GCCParser.LINES_START, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public WidContext wid() {
			return getRuleContext(WidContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public TerminalNode LINES_END() { return getToken(GCCParser.LINES_END, 0); }
		public LinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lines; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterLines(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitLines(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitLines(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinesContext lines() throws RecognitionException {
		LinesContext _localctx = new LinesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_lines);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(LINES_START);
			setState(118);
			col();
			setState(119);
			wid();
			setState(120);
			list();
			setState(121);
			match(LINES_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CurveContext extends ParserRuleContext {
		public TerminalNode CURVE_START() { return getToken(GCCParser.CURVE_START, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public WidContext wid() {
			return getRuleContext(WidContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public AmountContext amount() {
			return getRuleContext(AmountContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode CURVE_END() { return getToken(GCCParser.CURVE_END, 0); }
		public CurveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_curve; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterCurve(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitCurve(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitCurve(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CurveContext curve() throws RecognitionException {
		CurveContext _localctx = new CurveContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_curve);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(CURVE_START);
			setState(124);
			col();
			setState(125);
			wid();
			setState(126);
			range();
			setState(127);
			amount();
			setState(128);
			function();
			setState(129);
			match(CURVE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScaleContext extends ParserRuleContext {
		public TerminalNode SCALE_START() { return getToken(GCCParser.SCALE_START, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public WidContext wid() {
			return getRuleContext(WidContext.class,0);
		}
		public DirectionContext direction() {
			return getRuleContext(DirectionContext.class,0);
		}
		public PosContext pos() {
			return getRuleContext(PosContext.class,0);
		}
		public FromContext from() {
			return getRuleContext(FromContext.class,0);
		}
		public StepContext step() {
			return getRuleContext(StepContext.class,0);
		}
		public AmountContext amount() {
			return getRuleContext(AmountContext.class,0);
		}
		public PrecisionContext precision() {
			return getRuleContext(PrecisionContext.class,0);
		}
		public TerminalNode SCALE_END() { return getToken(GCCParser.SCALE_END, 0); }
		public ScaleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scale; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterScale(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitScale(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitScale(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScaleContext scale() throws RecognitionException {
		ScaleContext _localctx = new ScaleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_scale);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(SCALE_START);
			setState(132);
			col();
			setState(133);
			wid();
			setState(134);
			direction();
			setState(135);
			pos();
			setState(136);
			from();
			setState(137);
			step();
			setState(138);
			amount();
			setState(139);
			precision();
			setState(140);
			match(SCALE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColContext extends ParserRuleContext {
		public TerminalNode COL_START() { return getToken(GCCParser.COL_START, 0); }
		public TerminalNode COL_END() { return getToken(GCCParser.COL_END, 0); }
		public Color_valContext color_val() {
			return getRuleContext(Color_valContext.class,0);
		}
		public ColContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_col; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterCol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitCol(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitCol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColContext col() throws RecognitionException {
		ColContext _localctx = new ColContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_col);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(COL_START);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUMBER || _la==COLOR_TYPE) {
				{
				setState(143);
				color_val();
				}
			}

			setState(146);
			match(COL_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class X_rangeContext extends ParserRuleContext {
		public TerminalNode X_RANGE_START() { return getToken(GCCParser.X_RANGE_START, 0); }
		public Number_pairContext number_pair() {
			return getRuleContext(Number_pairContext.class,0);
		}
		public TerminalNode X_RANGE_END() { return getToken(GCCParser.X_RANGE_END, 0); }
		public X_rangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_x_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterX_range(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitX_range(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitX_range(this);
			else return visitor.visitChildren(this);
		}
	}

	public final X_rangeContext x_range() throws RecognitionException {
		X_rangeContext _localctx = new X_rangeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_x_range);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(X_RANGE_START);
			setState(149);
			number_pair();
			setState(150);
			match(X_RANGE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Y_rangeContext extends ParserRuleContext {
		public TerminalNode Y_RANGE_START() { return getToken(GCCParser.Y_RANGE_START, 0); }
		public Number_pairContext number_pair() {
			return getRuleContext(Number_pairContext.class,0);
		}
		public TerminalNode Y_RANGE_END() { return getToken(GCCParser.Y_RANGE_END, 0); }
		public Y_rangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_y_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).enterY_range(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GCCParserListener ) ((GCCParserListener)listener).exitY_range(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GCCParserVisitor ) return ((GCCParserVisitor<? extends T>)visitor).visitY_range(this);
			else return visitor.visitChildren(this);
		}
	}
